[Feat] BaseProject update with Network Checker and Splash

--- a/web/index.html
+++ b/web/index.html
@@ -72,7 +72,7 @@
 <body>
   <script>
     window.addEventListener('load', function(ev) {
-      _flutter.loader.load({
+      _flutter.loader.loadEntrypoint({
         serviceWorker: {
           serviceWorkerVersion: serviceWorkerVersion,
         },
