--- a/web/index.html
+++ b/web/index.html
@@ -143,7 +143,7 @@
   </script>
 
   <div class="main-content" id="loader-content">
-    <img src="assets/icon.png">
+    <p style="color: #2989f0;font-size: 28pt;font-weight: 900;">Shuru.com</p>
     <div class="loader"></div>
   </div>
 
